syntax = "proto3";

package main;

option go_package="./proto;pb";

import "google/api/annotations.proto";
// import "google/api/http.proto";

service Task{
    rpc Echo(HelloRequest) returns (HelloRequest) {
        option (google.api.http) = {
            post: "/echo"
            body: "*"
        };
    }
    rpc User(UserRequest) returns (UserResponse){};
}

message HelloRequest {
    string msg = 1;
}



message UserRequest {
    string uuid = 1;
}

message UserResponse {
    string name = 1;
    int32 age = 2;
    string email = 3;
}